--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 hola como estas? estamos realizando un prueba de github 
+nos dio la prueba y sequimos 
